# msteams-webhook-adapter

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: adaptive_card.rs  buildkite.rs  main.rs  snitch.rs
